deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commonpool
  namespace: default
spec:
  selector:
    matchLabels:
      app: commonpool
  template:
    metadata:
      labels:
        app: commonpool
    spec:
      containers:
        - name: commonpool
          image: commonpool/backend:latest
          volumeMounts:
            - mountPath: /var/data/public
              name: data
              readOnly: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: commonpool-data
