deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commonpool
  namespace: default
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: commonpool
